// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/layout/Logo adds logoMini class without sideBarOpen 1`] = `
.glamor-1 {
  background: #263238 url(test-file-stub) no-repeat center;
  background-size: 17.5rem;
  height: 100%;
  -webkit-transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

@media (min-width:600px) {
  .glamor-1 {
    width: 5rem;
    background-size: 24rem;
  }
}

<a
  href="/"
  onClick={[Function]}
>
  <div
    className="glamor-0 glamor-1"
    open={false}
  />
</a>
`;

exports[`components/layout/Logo renders correctly with sideBarOpen 1`] = `
.glamor-1 {
  background: #263238 url(test-file-stub) no-repeat center;
  background-size: 17.5rem;
  height: 100%;
  -webkit-transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

@media (min-width:600px) {
  .glamor-1 {
    width: 19rem;
    background-size: 17.5rem;
  }
}

<a
  href="/"
  onClick={[Function]}
>
  <div
    className="glamor-0 glamor-1"
    open={true}
  />
</a>
`;
